--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     <body>
         <esi:include src="/insights/static/chrome/snippets/header.html"/>
         <esi:include src="/insights/static/chrome/snippets/footer.html"/>
-        <div id="root" />
+        <div id="root" style="padding: 15px;" />
     </body>
 </html>
